modules/eks_addons/argo_cd/template/argocd_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd 
  annotations:
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck: HTTP 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/scheme:  ${lb_scheme}
    alb.ingress.kubernetes.io/security-group: ${lb_security_group1} , ${lb_security_group2}
    alb.ingress.kubernetes.io/subnets: ${lb_subnet1} , ${lb_subnet2}
    alb.ingress.kubernetes.io/group.name: ${ingress_group_name}

spec:
  ingressClassName: alb
  rules:
  - host: ${lb_domain_name}
    http:
      paths:
      - pathType: Prefix
        path: ${ingress_path}
        backend:
          service:
            name: argocd-server
            port: 
              number: 80
